<resources>
    <string name="app_name">BudgetApplication</string>
    <string name="Logo">TODO1</string>
    <string name="logo">TOD</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="LogoB">logo</string>
    <string name="user_name">User Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_pwd">Enter pwd</string>
    <string name="enter_password">Enter Password</string>
    <string name="loginBtn">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="reEnterPwd">Re Enter Password</string>
    <string name="signupBtn">Sign Up</string>
    <string name="email">Enter Email Address</string>
    <string name="logoS">logoS</string>
    <string name="already_registered">Already Registered??</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_navigation_view">NavigationView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">HOME</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_view_drawer">NavigationViewDrawer</string>
    <string name="cBHome">Home</string>
    <string name="amount">Amount</string>
    <string name="EnterAmount">Enter Amount</string>
    <string name="joinNow">Join Now</string>
    <string name="log">"Already have an account?  Login "</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_phoneNo">Enter Phone No</string>
    <string name="Single">Single</string>
    <string name="married">Married</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="enterOldPwd">Enter Old Password</string>
    <string name="enterNewPwd">Enter New Password</string>
    <string name="resetPwd">Reset Password</string>
    <string name="enterEmail">Enter Email Address</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="please_enter_the_verification_code_sent_to_your_email_address">Please enter the verification code sent to your email address</string>
    <string name="home">HOME</string>
    <string name="todo4">TODO</string>
    <string name="history">History</string>
    <string name="event">Event</string>
    <string name="budget_history">Budget History</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="individual01">Individual</string>
    <string name="todoaad">image</string>
    <string name="food">Food</string>
    <string name="home_repair">Home Repair</string>
    <string name="transport">Transport</string>
    <string name="vehicle_maintain">Vehicle Maintain</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="clothing">Clothing</string>
    <string name="tobacco_alchohol">Tobacco / Alchohol</string>
    <string name="healthcare">Health care</string>
    <string name="sports_other">Sports / Other</string>
    <string name="glossaries">Glossaries</string>
    <string name="saloon_service">Saloon Service</string>
    <string name="utility_bills">Utility Bills</string>
    <string name="magazines">Magazines</string>
    <string name="rent">Rent</string>
    <string name="occasions">Occasioins</string>
    <string name="property_tax">Property Tex</string>
    <string name="donations">Donations</string>
    <string name="vacation">Vacation</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="loan_payment">Loan Payment</string>
    <string name="insurance">Insurance</string>
    <string name="Add">Add</string>
    <string name="home1">Home</string>
    <string name="individual1">Individual</string>
    <string name="income">Income</string>
    <string name="event1">Event</string>
    <string name="budget_history1">Budget History</string>
    <string name="todo">TODO</string>
    <string name="todo01">TODO</string>
    <string name="todo02">TODO</string>
    <string name="history01">History</string>
    <string name="todo001">TODO</string>
    <string name="family">Family</string>
    <string name="expenses">Expenses</string>
    <string name="reminder">Reminder</string>
    <string name="todo04">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo20">TODO</string>
    <string name="individualExpenseModel">Individual</string>
    <string name="view_income">View Income</string>
    <string name="add_budget">Add Budget</string>
    <string name="add_expens">Add Expense</string>
    <string name="view_expense">View expense</string>
    <string name="ViewReminder">View Reminder</string>
    <string name="AddReminder">Add Reminder</string>
    <string name="notify">Notify</string>
    <string name="TodoList">Todo List</string>
    <string name="home01">Home</string>
    <string name="expenses02">Expenses</string>
    <string name="budget_history03">Budget History</string>
    <string name="individual04">Individual</string>
    <string name="history05">History</string>
    <string name="reminder05">Reminder</string>
    <string name="event06">Event</string>
    <string name="income07">Income</string>
    <string name="family08">Family</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_event_tab">EventTab</string>
    <string name="tab_text_1">Birth Day</string>
    <string name="tab_text_2">Reunion</string>
    <string name="tab_text_3">Farewell</string>
    <string name="event01">Event</string>
    <string name="EnterCrowd">Enter Crowd </string>
    <string name="Refreshment">Refreshment</string>
    <string name="decoration">Decoration</string>
    <string name="Birthdaycake">Birthday Cake</string>
    <string name="music">Music</string>
    <string name="DancingGroup">Dancing Group</string>
    <string name="photo">Photo / Video</string>
    <string name="Equipment">Equipment Hire</string>
    <string name="invitation">Invitations</string>
    <string name="Other">Other</string>
    <string name="cake">Cake</string>
    <string name="incomeType">Income Type</string>
    <string name="date">Date</string>
    <string name="budget_history_price">Budget History Price</string>
    <string name="budget_history_item">Budget History item</string>
    <string name="budget_history_date">Budget History Date</string>
    <string name="DElete">TODO</string>
    <string name="Play">TODO</string>
    <string name="view_income_price">View Income Price</string>
    <string name="view_income_item">View Income Item</string>
    <string name="ViewIncome_date">ViewIncome Date</string>
    <string name="ViewIncome_item">ViewIncome Item</string>
    <string name="reunion">Reunion</string>
    <string name="birthday">Birthday</string>
    <string name="farewell">Farewell</string>
    <string name="view_expense_price">Expense Price</string>
    <string name="ViewExpense_item">Expense Item</string>
    <string name="ViewExpense_date">Expense date</string>
    <string name="ExpenseType">Expense Type</string>
    <string name="paymthd">Payment Method</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_Individual">Individual</string>
    <string name="title_activity_add_to_budget">AddToBudget</string>
    <string name="title_activity_add_to_budget_tab">Add To BudgetTab</string>
    <string name="tab_text_4">Individual</string>
    <string name="tab_text_5">Family</string>
    <string name="tab_text_6">Event</string>
    <string name="budgettype">budgetType</string>
    <string-array name="Individual_Items">
        <item>Dummy 01</item>
        <item>Dummy 02</item>
        <item>Dummy 03</item>
        <item>Dummy 04</item>
        <item>Dummy 05</item>
        <item>Dummy 06</item>
        <item>Dummy 07</item>
        <item>Dummy 08</item>
        <item>Dummy 09</item>
        <item>Dummy 10</item>

    </string-array>
    <string-array name="Individual_PriceList">
        <item>Dummy Price 01</item>
        <item>Dummy Price 02</item>
        <item>Dummy Price 03</item>
        <item>Dummy Price 04</item>
        <item>Dummy Price 05</item>
        <item>Dummy Price 06</item>
        <item>Dummy Price 07</item>
        <item>Dummy Price 08</item>
        <item>Dummy Price 09</item>
        <item>Dummy Price 10</item>

    </string-array>
    <string-array name="Family_Items">
        <item>Dummy 01</item>
        <item>Dummy 02</item>
        <item>Dummy 03</item>
        <item>Dummy 04</item>
        <item>Dummy 05</item>
        <item>Dummy 06</item>
        <item>Dummy 07</item>
        <item>Dummy 08</item>
        <item>Dummy 09</item>
        <item>Dummy 10</item>

    </string-array>
    <string-array name="Family_PriceList">
        <item>Dummy Price 01</item>
        <item>Dummy Price 02</item>
        <item>Dummy Price 03</item>
        <item>Dummy Price 04</item>
        <item>Dummy Price 05</item>
        <item>Dummy Price 06</item>
        <item>Dummy Price 07</item>
        <item>Dummy Price 08</item>
        <item>Dummy Price 09</item>
        <item>Dummy Price 10</item>

    </string-array>
    <string-array name="Event_Items">
        <item>Dummy 01</item>
        <item>Dummy 02</item>
        <item>Dummy 03</item>
        <item>Dummy 04</item>
        <item>Dummy 05</item>
        <item>Dummy 06</item>
        <item>Dummy 07</item>
        <item>Dummy 08</item>
        <item>Dummy 09</item>
        <item>Dummy 10</item>

    </string-array>
    <string-array name="Event_PriceList">
        <item>Dummy Price 01</item>
        <item>Dummy Price 02</item>
        <item>Dummy Price 03</item>
        <item>Dummy Price 04</item>
        <item>Dummy Price 05</item>
        <item>Dummy Price 06</item>
        <item>Dummy Price 07</item>
        <item>Dummy Price 08</item>
        <item>Dummy Price 09</item>
        <item>Dummy Price 10</item>

    </string-array>
    <string-array name="ViewIncome_Items">
        <item>Dummy 01</item>
        <item>Dummy 02</item>
        <item>Dummy 03</item>
        <item>Dummy 04</item>
        <item>Dummy 05</item>
        <item>Dummy 06</item>
        <item>Dummy 07</item>
        <item>Dummy 08</item>
        <item>Dummy 09</item>
        <item>Dummy 10</item>

    </string-array>
    <string-array name="ViewIncome_PriceList">
        <item>Dummy Price 01</item>
        <item>Dummy Price 02</item>
        <item>Dummy Price 03</item>
        <item>Dummy Price 04</item>
        <item>Dummy Price 05</item>
        <item>Dummy Price 06</item>
        <item>Dummy Price 07</item>
        <item>Dummy Price 08</item>
        <item>Dummy Price 09</item>
        <item>Dummy Price 10</item>

    </string-array>
</resources>