<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity"

    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="#FF9800"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/userNameSignup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_account_box_black_24dp"
        android:ems="10"
        android:hint="@string/enter_user_name"

        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/userPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:ems="10"
        android:hint="@string/enter_phoneNo"
        android:textColor="#FF9800"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/radio_Single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Single"
            />

        <RadioButton android:id="@+id/radio_married"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/married"
            android:layout_marginLeft="200dp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/pwdSignup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pwdReEnter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/reEnterPwd"

        android:inputType="textPassword" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/signupBtn" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF9800"
        android:text="@string/already_registered"/>

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/login"
        android:textColor="#FF9800"
        android:textStyle="bold" />


</LinearLayout>




</LinearLayout>