<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>

    <EditText
        android:id="@+id/AmountFw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EnterAmount"
        android:inputType="number" />

    <EditText
        android:id="@+id/CrowdFw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EnterCrowd"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxRefreshmentFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/Refreshment"
            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxDecorationFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/decoration"

            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxBdCakeFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/cake"

            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxMusicFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/music"

            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxDanGrpFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/DancingGroup"

            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxphotoFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/photo"

            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxEquipmentFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/Equipment"

            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxTobaccoFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/tobacco_alchohol"

            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxInvitationFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/invitation"

            tools:ignore="Suspicious0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxOtherFw"
            android:layout_width="0dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:text="@string/Other"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/addFw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Add"
            android:background="#FB8C00"/>

    </LinearLayout>



</RelativeLayout>