<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Expenses"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/AddTobudget"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/add_budget"
        android:gravity="center"/>

    <Button
        android:id="@+id/AddToExpense"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/add_expens"
        android:gravity="center"/>

    <Button
        android:id="@+id/ViewExpense"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/view_expense"
        android:gravity="center"/>




</LinearLayout>